src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>A_o__c</fullName>
        <label>Año</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_o_del_Vehiculo__c</fullName>
        <label>Año del Vehiculo</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avaluo_Patrimonio__c</fullName>
        <label>Avaluo Patrimonio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cargo__c</fullName>
        <label>Cargo</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_158__c</fullName>
        <label>Codigo 158</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comisi_n_dealer__c</fullName>
        <label>Comisión dealer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Concesionario__c</fullName>
        <label>Concesionario</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Importadores__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Concesionario</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contado__c</fullName>
        <label>Contado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cuoton__c</fullName>
        <label>Cuoton</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EF_Original__c</fullName>
        <label>EF Original</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Egresos__c</fullName>
        <label>Egresos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_Call__c</fullName>
        <label>Ejecutivo Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jocelyn Umaña</fullName>
                </value>
                <value>
                    <fullName>Karem Peñaloza</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_Cierre__c</fullName>
        <label>Estado Cierre</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VIGENTE</fullName>
                </value>
                <value>
                    <fullName>RENOVADO</fullName>
                </value>
                <value>
                    <fullName>PREPAGADO</fullName>
                </value>
                <value>
                    <fullName>RECHAZADO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_Civil__c</fullName>
        <label>Estado Civil</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SO</fullName>
                    <label>SOLTERO</label>
                </value>
                <value>
                    <fullName>CA</fullName>
                    <label>CASADO</label>
                </value>
                <value>
                    <fullName>SL</fullName>
                    <label>DIVORCIADO</label>
                </value>
                <value>
                    <fullName>SH</fullName>
                    <label>SEPARADO DE HECHO</label>
                </value>
                <value>
                    <fullName>VI</fullName>
                    <label>VIUDO</label>
                </value>
                <value>
                    <fullName>EP</fullName>
                    <label>EN PAREJA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_Solicitud__c</fullName>
        <label>Estado Solicitud</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APROBADA</fullName>
                </value>
                <value>
                    <fullName>RECHAZADA</fullName>
                </value>
                <value>
                    <fullName>CONDICIONADA</fullName>
                </value>
                <value>
                    <fullName>NO ACCESADA</fullName>
                </value>
                <value>
                    <fullName>PENDIENTE O EN PROCESO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_cr_dito__c</fullName>
        <label>Estado crédito</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estudios__c</fullName>
        <label>Estudios</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_1era_cuota__c</fullName>
        <label>Fecha 1era cuota</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Hora_Ultimo_Evento__c</fullName>
        <label>Fecha/Hora Ultimo Evento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_cotizaci_n__c</fullName>
        <label>Fecha cotización</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_Adjudicaci_n__c</fullName>
        <label>Fecha de Adjudicación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_de_Vencimiento_Cuoton__c</fullName>
        <label>Fecha de Vencimiento Cuoton</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_evaluaci_n__c</fullName>
        <label>Fecha evaluación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_ingreso_empleo__c</fullName>
        <label>Fecha ingreso empleo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_ltima_Cuota__c</fullName>
        <label>Fecha Última Cuota</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_renovaci_n__c</fullName>
        <label>Fecha renovación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financiamiento_Patrimonio__c</fullName>
        <label>Financiamiento Patrimonio</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Credito_Renovado__c</fullName>
        <inlineHelpText>Corresponde al ID del nuevo crédito producto de la renovación del cliente.</inlineHelpText>
        <label>ID Renovación</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id_Credito__c</fullName>
        <externalId>true</externalId>
        <label>IdCredito</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importadores__c</fullName>
        <label>Importadores</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Importadores</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local__c</fullName>
        <label>Local</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Concesionario__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Locales</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marca_Veh_culo__c</fullName>
        <label>Marca Vehículo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marcas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modelo_Vehiculo__c</fullName>
        <label>Modelo Vehiculo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monto_Pre_Aprobado__c</fullName>
        <label>Monto Pre-Aprobado</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_10__c</fullName>
        <formula>ADDMONTHS(Primer_dia_vencimiento__c,-2)</formula>
        <label>N-10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>N_10_fecha__c</fullName>
        <label>N-10 fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>N_11_fecha__c</fullName>
        <label>N-11 fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>N_1__c</fullName>
        <formula>ADDMONTHS(Primer_dia_vencimiento__c,-11)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>N-1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>N_1_fecha__c</fullName>
        <label>N-1 fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>N_2__c</fullName>
        <formula>ADDMONTHS(Primer_dia_vencimiento__c,-10)</formula>
        <label>N-2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>N_ACTUAL__c</fullName>
        <description>Fórmula anterior: CEILING((Primer_dia_vencimiento__c - TODAY()) / 365 * 12)
Se modifica para tener mayor precisión en ciertos días del mes. 01/04/2020</description>
        <formula>(YEAR(Primer_dia_vencimiento__c) - YEAR(TODAY())) * 12 + (MONTH(Primer_dia_vencimiento__c) - MONTH(TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>N ACTUAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N__c</fullName>
        <formula>IF(
AND(MONTH(Fecha_ltima_Cuota__c) = MONTH(TODAY()), YEAR(Fecha_ltima_Cuota__c) = YEAR(TODAY())+1),&apos;+11&apos;,
IF(
AND(MONTH(Fecha_ltima_Cuota__c) = MONTH(TODAY())-1, YEAR(Fecha_ltima_Cuota__c) = YEAR(TODAY())+1),&apos;-11&apos;,
IF(
AND(MONTH(Fecha_ltima_Cuota__c) = MONTH(TODAY())-2, YEAR(Fecha_ltima_Cuota__c) = YEAR(TODAY())+1),&apos;-10&apos;,
IF(
AND(MONTH(Fecha_ltima_Cuota__c) = MONTH(TODAY())-3, YEAR(Fecha_ltima_Cuota__c) = YEAR(TODAY())+1),&apos;-9&apos;,
IF(
AND(MONTH(Fecha_ltima_Cuota__c) = MONTH(TODAY())-4, YEAR(Fecha_ltima_Cuota__c) = YEAR(TODAY())+1),&apos;-8&apos;,
IF(
AND(MONTH(Fecha_ltima_Cuota__c) = MONTH(TODAY())-5, YEAR(Fecha_ltima_Cuota__c) = YEAR(TODAY())+1),&apos;-7&apos;,
IF(
AND(MONTH(Fecha_ltima_Cuota__c) = MONTH(TODAY())-6, YEAR(Fecha_ltima_Cuota__c) = YEAR(TODAY())+1),&apos;-6&apos;,
IF(
AND(MONTH(Fecha_ltima_Cuota__c) = MONTH(TODAY())-7, YEAR(Fecha_ltima_Cuota__c) = YEAR(TODAY())+1),&apos;-5&apos;,
IF(
AND(MONTH(Fecha_ltima_Cuota__c) = MONTH(TODAY())-8, YEAR(Fecha_ltima_Cuota__c) = YEAR(TODAY())+1),&apos;-4&apos;,
IF(
AND(MONTH(Fecha_ltima_Cuota__c) = MONTH(TODAY())-9, YEAR(Fecha_ltima_Cuota__c) = YEAR(TODAY())+1),&apos;-3&apos;,
IF(
AND(YEAR(Fecha_ltima_Cuota__c) = YEAR(TODAY()), (MONTH(TODAY())-10 = 1)),&apos;-&apos;&amp;TEXT(MONTH(Fecha_ltima_Cuota__c) - MONTH(TODAY())),
IF(
AND(MONTH(Fecha_ltima_Cuota__c) = MONTH(TODAY())+1, YEAR(Fecha_ltima_Cuota__c) = YEAR(TODAY())+1)
,&apos;-12&apos;,&apos;-&apos;&amp;TEXT(MONTH(Fecha_ltima_Cuota__c) - MONTH(TODAY()))
) )))))))))))</formula>
        <label>N</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_en_curso__c</fullName>
        <formula>ADDMONTHS(Primer_dia_vencimiento__c,-12)</formula>
        <label>N en curso</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>N_mas_11__c</fullName>
        <formula>ADDMONTHS(Primer_dia_vencimiento__c,0)</formula>
        <label>N+11</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>N_mas_11_fecha__c</fullName>
        <label>N+11 fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>N_menos_11__c</fullName>
        <formula>ADDMONTHS(Primer_dia_vencimiento__c,-1)</formula>
        <label>N-11</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>N_posterior__c</fullName>
        <formula>ADDMONTHS(Primer_dia_vencimiento__c,-13)</formula>
        <label>N posterior</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nombre_EF__c</fullName>
        <label>Nombre EF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Entidades_Financieras</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nombre_Empleador__c</fullName>
        <label>Nombre Empleador</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Referencia__c</fullName>
        <label>Nombre Referencia</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_completo_aval__c</fullName>
        <label>Nombre completo aval</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_completo_para__c</fullName>
        <label>Nombre completo para</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_vendedor__c</fullName>
        <label>Nombre vendedor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Otros_Ingresos__c</fullName>
        <label>Otros Ingresos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Otros_Ingresos_a_o_tributario__c</fullName>
        <label>Otros Ingresos año tributario</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPU__c</fullName>
        <description>Campo placa patente única.</description>
        <inlineHelpText>Placa Patente Única</inlineHelpText>
        <label>PPU</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patente__c</fullName>
        <label>Patente</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pie__c</fullName>
        <label>Pie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plazo__c</fullName>
        <label>Plazo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Plazos</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Precio_Vehiculo__c</fullName>
        <label>Precio del Vehiculo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preevaluacion_EF__c</fullName>
        <label>Preevaluación EF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preaprobado</fullName>
                </value>
                <value>
                    <fullName>Prepagado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
                <value>
                    <fullName>Refinanciamiento</fullName>
                </value>
                <value>
                    <fullName>Prepago anticipado (1-6)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primer_dia_vencimiento__c</fullName>
        <formula>DATE(YEAR(Fecha_ltima_Cuota__c),MONTH(Fecha_ltima_Cuota__c),1)</formula>
        <label>Primer día vencimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primer_dia_vencimiento_fecha__c</fullName>
        <label>Primer día vencimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Probabilidad_Renov_IA__c</fullName>
        <description>Campo de temperatura de cierre de negocio cargado desde BI</description>
        <label>Probabilidad Renov. IA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alta</fullName>
                </value>
                <value>
                    <fullName>Moderada</fullName>
                </value>
                <value>
                    <fullName>Baja</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regimen_Matrimonial__c</fullName>
        <label>Regimen Matrimonial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CB</fullName>
                    <label>EN COMUNIDAD DE BIENES</label>
                </value>
                <value>
                    <fullName>SB</fullName>
                    <label>SEPARACION DE BIENES</label>
                </value>
                <value>
                    <fullName>PG</fullName>
                    <label>PARTICIPACION DE GANANCIAS</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <label>NO APLICA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relaci_n__c</fullName>
        <label>Relación</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renta_Bienes_Raices__c</fullName>
        <label>Renta Bienes Raices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renta__c</fullName>
        <label>Renta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Respuesta_EF__c</fullName>
        <label>Respuesta EF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Preaprobado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
                <value>
                    <fullName>Prepagado</fullName>
                </value>
                <value>
                    <fullName>Sujeto a evaluación</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retoma__c</fullName>
        <label>Retoma</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rut_Aval__c</fullName>
        <label>Rut Aval</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rut_compra_para__c</fullName>
        <label>Rut compra para</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rut_vendedor__c</fullName>
        <label>Rut vendedor</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sueldo_Liquido__c</fullName>
        <label>Sueldo Liquido</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tel_fono_referencia__c</fullName>
        <label>Teléfono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tipo_Trabajador__c</fullName>
        <label>Tipo Trabajador</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DE</fullName>
                    <label>DEPENDIENTE</label>
                </value>
                <value>
                    <fullName>IN</fullName>
                    <label>INDEPENDIENTE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Contrato__c</fullName>
        <label>Tipo de Contrato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Indefinido</fullName>
                </value>
                <value>
                    <fullName>Plazo Fijo</fullName>
                </value>
                <value>
                    <fullName>Contrata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Credito__c</fullName>
        <label>Tipo de Credito</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Patrimonio__c</fullName>
        <label>Tipo de Patrimonio</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Renta__c</fullName>
        <label>Tipo de Renta</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Residencia__c</fullName>
        <label>Tipo de Residencia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>PROPIA SIN DEUDA</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>PROPIA CON DEUDA</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>ARRENDADA</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>VIVE CON FAMILIARES</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>VIVE CON PADRES</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>FISCAL O EMPRESA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Veh_culo__c</fullName>
        <label>Tipo de Vehículo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Estado_de_Veh_culo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Toma__c</fullName>
        <label>Toma</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_a_Financiar__c</fullName>
        <label>Total a Financiar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VFMG__c</fullName>
        <label>VFMG</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <description>Campo de número de identificación del vehículo</description>
        <inlineHelpText>Número de Identificación del Vehículo</inlineHelpText>
        <label>VIN</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor_Cuota__c</fullName>
        <label>Valor Cuota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valor_Futuro__c</fullName>
        <label>Valor Futuro</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>Fecha_de_Vencimiento_Cuoton__c</columns>
        <columns>Nombre_EF__c</columns>
        <columns>Importadores__c</columns>
        <columns>Local__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos los créditos</label>
    </listViews>
    <listViews>
        <fullName>Avanza</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ASSET.NAME</columns>
        <columns>Id_Credito__c</columns>
        <columns>N_ACTUAL__c</columns>
        <columns>Fecha_de_Vencimiento_Cuoton__c</columns>
        <columns>Local__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tipo_de_Credito__c</field>
            <operation>equals</operation>
            <value>CC</value>
        </filters>
        <filters>
            <field>N_ACTUAL__c</field>
            <operation>equals</operation>
            <value>0,1,2,3,4,5,6,7,8,9,10,11,12</value>
        </filters>
        <label>Avanza</label>
    </listViews>
    <listViews>
        <fullName>N01</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Fecha_de_Vencimiento_Cuoton__c</columns>
        <columns>Nombre_EF__c</columns>
        <columns>Importadores__c</columns>
        <columns>Local__c</columns>
        <columns>Nombre_vendedor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N_ACTUAL__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>N01</label>
    </listViews>
    <listViews>
        <fullName>N02</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Fecha_de_Vencimiento_Cuoton__c</columns>
        <columns>Nombre_EF__c</columns>
        <columns>Importadores__c</columns>
        <columns>Local__c</columns>
        <columns>Nombre_vendedor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N_ACTUAL__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>N02</label>
    </listViews>
    <listViews>
        <fullName>N03</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Fecha_de_Vencimiento_Cuoton__c</columns>
        <columns>Nombre_EF__c</columns>
        <columns>Importadores__c</columns>
        <columns>Local__c</columns>
        <columns>Nombre_vendedor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N_ACTUAL__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <label>N03</label>
    </listViews>
    <listViews>
        <fullName>N04</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Fecha_de_Vencimiento_Cuoton__c</columns>
        <columns>Nombre_EF__c</columns>
        <columns>Importadores__c</columns>
        <columns>Local__c</columns>
        <columns>Nombre_vendedor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N_ACTUAL__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <label>N04</label>
    </listViews>
    <listViews>
        <fullName>N05</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Fecha_de_Vencimiento_Cuoton__c</columns>
        <columns>Nombre_EF__c</columns>
        <columns>Importadores__c</columns>
        <columns>Local__c</columns>
        <columns>Nombre_vendedor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N_ACTUAL__c</field>
            <operation>equals</operation>
            <value>5</value>
        </filters>
        <label>N05</label>
    </listViews>
    <listViews>
        <fullName>N06</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Fecha_de_Vencimiento_Cuoton__c</columns>
        <columns>Nombre_EF__c</columns>
        <columns>Importadores__c</columns>
        <columns>Local__c</columns>
        <columns>Nombre_vendedor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N_ACTUAL__c</field>
            <operation>equals</operation>
            <value>6</value>
        </filters>
        <label>N06</label>
    </listViews>
    <listViews>
        <fullName>N07</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Fecha_de_Vencimiento_Cuoton__c</columns>
        <columns>Nombre_EF__c</columns>
        <columns>Importadores__c</columns>
        <columns>Local__c</columns>
        <columns>Nombre_vendedor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N_ACTUAL__c</field>
            <operation>equals</operation>
            <value>7</value>
        </filters>
        <label>N07</label>
    </listViews>
    <listViews>
        <fullName>N08</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Fecha_de_Vencimiento_Cuoton__c</columns>
        <columns>Nombre_EF__c</columns>
        <columns>Importadores__c</columns>
        <columns>Local__c</columns>
        <columns>Nombre_vendedor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N_ACTUAL__c</field>
            <operation>equals</operation>
            <value>8</value>
        </filters>
        <label>N08</label>
    </listViews>
    <listViews>
        <fullName>N09</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Fecha_de_Vencimiento_Cuoton__c</columns>
        <columns>Nombre_EF__c</columns>
        <columns>Importadores__c</columns>
        <columns>Local__c</columns>
        <columns>Nombre_vendedor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N_ACTUAL__c</field>
            <operation>equals</operation>
            <value>9</value>
        </filters>
        <label>N09</label>
    </listViews>
    <listViews>
        <fullName>N10</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Fecha_de_Vencimiento_Cuoton__c</columns>
        <columns>Nombre_EF__c</columns>
        <columns>Importadores__c</columns>
        <columns>Local__c</columns>
        <columns>Nombre_vendedor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N_ACTUAL__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <label>N10</label>
    </listViews>
    <listViews>
        <fullName>N11</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Fecha_de_Vencimiento_Cuoton__c</columns>
        <columns>Nombre_EF__c</columns>
        <columns>Importadores__c</columns>
        <columns>Local__c</columns>
        <columns>Nombre_vendedor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N_ACTUAL__c</field>
            <operation>equals</operation>
            <value>11</value>
        </filters>
        <label>N11</label>
    </listViews>
    <listViews>
        <fullName>N12</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Fecha_de_Vencimiento_Cuoton__c</columns>
        <columns>Nombre_EF__c</columns>
        <columns>Importadores__c</columns>
        <columns>Local__c</columns>
        <columns>Nombre_vendedor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N_ACTUAL__c</field>
            <operation>equals</operation>
            <value>12</value>
        </filters>
        <label>N12</label>
    </listViews>
    <listViews>
        <fullName>N_Actual</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Fecha_de_Vencimiento_Cuoton__c</columns>
        <columns>Nombre_EF__c</columns>
        <columns>Importadores__c</columns>
        <columns>Local__c</columns>
        <columns>Nombre_vendedor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>N_ACTUAL__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>N Actual</label>
    </listViews>
    <recordTypes>
        <fullName>Credito_Renovaciones</fullName>
        <active>true</active>
        <label>Credito Renovaciones</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Estado_Solicitud</fullName>
        <active>true</active>
        <description>restringue el llenado del campo</description>
        <errorConditionFormula>AND(NOT(BEGINS(Estado_cr_dito__c, &apos;PREPAGADO&apos;)),  
			not(BEGINS(Estado_cr_dito__c, &apos;RENOVADO&apos;)),
				not(BEGINS(Estado_cr_dito__c, &apos;Adjudicado&apos;)),
			not(BEGINS(Estado_cr_dito__c, &apos;REFINANCIA&apos;)
			))</errorConditionFormula>
        <errorDisplayField>Estado_cr_dito__c</errorDisplayField>
        <errorMessage>El campo Estado Credito solo puede incluir los Valores &quot;PREPAGADO&quot;, &quot;RENOVADO&quot; y &quot;REFINANCIA&quot;</errorMessage>
    </validationRules>
</CustomObject>